# CaptainJack

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  captain-jack-daemon.c  captain-jack-device.c  install.sh  me.junon.CaptainJack.plist  patch-jack.sh  uninstall.sh
CaptainJack.driver/Contents/: Info.plist
CaptainJack.driver/Contents/MacOS/: CaptainJack
CaptainJack.driver/Contents/Resources/English.lproj/: Localizable.strings
NullAudio.driver/Contents/: Info.plist
NullAudio.driver/Contents/MacOS/: NullAudio
ext/: CMakeLists.txt  patch-jack.sh
ext/jack/config/os/macosx/: pThreadUtilities.h
ext/jack/include/: version.h
ext/jack/libjack/: Makefile.am
src/: CMakeLists.txt  captain-jack-daemon.c  captain-jack-daemon.cc  captain-jack-device.c  captain-jack-device.cc  xmit.c  xmit.h
