# Jack / Jackd
execute_process (COMMAND ./patch-jack.sh WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
execute_process (COMMAND ./autogen.sh WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/jack")
execute_process (COMMAND ./configure WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/jack")
include_directories (jack jack/libjack jack/jack jack/include jack/config)
add_definitions (-DJACK_LOCATION="/usr/local/bin")
file (GLOB_RECURSE LIBJACK_SRC RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" jack/libjack/*.c)
file (GLOB_RECURSE JACKD_SRC RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" jack/jackd/*.c)
list (REMOVE_ITEM JACKD_SRC jack/jackd/jackstart.c)
add_library (jack  ${LIBJACK_SRC})
add_executable (jackd ${JACKD_SRC})
target_link_libraries (jackd jack)
target_link_libraries (jackd db)
target_link_libraries (jackd "-framework CoreMIDI")
target_link_libraries (jackd "-framework CoreAudio")
